--- a/pessoa/templates/pessoa/pessoa_lista.html
+++ b/pessoa/templates/pessoa/pessoa_lista.html
@@ -4,6 +4,33 @@
 
 <br>
 
-AQUI ESTARÁ FORMULÁRIO
+<table>
+    <thead>
+        <tr>
+            <th>Nome</th>
+            <th>Sobrenome</th>
+            <th>Data de nascimento</th>
+            <th>E-mail</th>
+            <th>Link GitHub</th>
+            <th>Status</th>
+        </tr>
+    </thead>
+
+    <tbody>
+
+        {% for pessoa in pessoas %}
+        <tr>
+            <td>{{ pessoa.nome }}</td>
+            <td>{{ pessoa.sobrenome }}</td>
+            <td>{{ pessoa.data_nascimento }}</td>
+            <td>{{ pessoa.email }}</td>
+            <td>{{ pessoa.link_git }}</td>
+            <td>{{ pessoa.ativo }}</td>
+
+            {% endfor %}
+        </tr>
+
+    </tbody>
+</table>
 
 {% endblock %}
