criado forms, url e template para adicionar novos dados no bd

--- a/pessoa/templates/pessoa/pessoa_lista.html
+++ b/pessoa/templates/pessoa/pessoa_lista.html
@@ -4,6 +4,10 @@
 
 <br>
 
+<a href="{% url 'pessoa.novo' %}">Formulário</a>
+
+<br><br>
+
 <table>
     <thead>
         <tr>
@@ -32,9 +36,9 @@
                 Desativado
                 {% endif %}
             </td>
-
-            {% endfor %}
         </tr>
+        {% endfor %}
+
 
     </tbody>
 </table>
