adicionado opcao para excluir um dado cadastrado

--- a/pessoa/templates/pessoa/pessoa_lista.html
+++ b/pessoa/templates/pessoa/pessoa_lista.html
@@ -39,6 +39,7 @@
                 {% endif %}
             </td>
             <td><a href="{% url 'pessoa.editar' pessoa.pk %}">Editar</a></td>
+            <td><a href="{% url 'pessoa.remover' pessoa.pk %}">Excluir</a></td>
 
 
         </tr>
