--- a/templates/parciais/_nav.html
+++ b/templates/parciais/_nav.html
@@ -14,9 +14,9 @@
                     <a class="nav-link" href="{% url 'pessoa.index' %}">Lista</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0 ml-lg-4" action="/busca/">
-                <input name="termo" value="" class="form-control mr-sm-2" type="search" placeholder="Pesquisar"
-                    aria-label="Search">
+            <form class="form-inline my-2 my-lg-0 ml-lg-4" method="GET">
+                <input name="nome_busca" value="" class="form-control mr-sm-2" type="search"
+                    placeholder="Buscar pelo nome" aria-label="Search">
             </form>
         </div>
     </div>
