--- a/pessoa/templates/pessoa/pessoa_lista.html
+++ b/pessoa/templates/pessoa/pessoa_lista.html
@@ -8,45 +8,52 @@
 
 <br><br>
 
-<table>
-    <thead>
-        <tr>
-            <th>Nome</th>
-            <th>Sobrenome</th>
-            <th>Data de nascimento</th>
-            <th>E-mail</th>
-            <th>Link GitHub</th>
-            <th>Status</th>
-            <th>Ações</th>
-        </tr>
-    </thead>
+<div class="table-responsive">
+    <table class="table table-bordered table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Nome</th>
+                <th scope="col">Sobrenome</th>
+                <th scope="col">Data de nascimento</th>
+                <th scope="col">E-mail</th>
+                <th scope="col">Link GitHub</th>
+                <th scope="col">Status</th>
+                <th scope="col">Ação 1</th>
+                <th scope="col">Ação 2</th>
+            </tr>
+        </thead>
 
-    <tbody>
+        <tbody>
 
-        {% for pessoa in pessoas %}
-        <tr>
-
-            <td>{{ pessoa.nome }}</td>
-            <td>{{ pessoa.sobrenome }}</td>
-            <td>{{ pessoa.data_nascimento|date:"d/m/Y" }}</td>
-            <td>{{ pessoa.email }}</td>
-            <td>{{ pessoa.link_git }}</td>
-            <td>
-                {% if pessoa.ativo %}
-                Ativo
+            {% for pessoa in pessoas %}
+            {% if pessoa.ativo %}
+            <tr class="table-success">
                 {% else %}
-                Desativado
+            <tr class="table-danger">
                 {% endif %}
-            </td>
-            <td><a href="{% url 'pessoa.editar' pessoa.pk %}">Editar</a></td>
-            <td><a href="{% url 'pessoa.remover' pessoa.pk %}">Excluir</a></td>
+
+                <td>{{ pessoa.nome }}</td>
+                <td>{{ pessoa.sobrenome }}</td>
+                <td>{{ pessoa.data_nascimento|date:"d/m/Y" }}</td>
+                <td>{{ pessoa.email }}</td>
+                <td><a href="{{pessoa.link_git}}">{{ pessoa.link_git }}</a></td>
+                <td>
+                    {% if pessoa.ativo %}
+                    Ativo
+                    {% else %}
+                    Desativado
+                    {% endif %}
+                </td>
+                <td><a href="{% url 'pessoa.editar' pessoa.pk %}">Editar</a></td>
+                <td><a href="{% url 'pessoa.remover' pessoa.pk %}">Remover</a></td>
 
 
-        </tr>
-        {% endfor %}
+            </tr>
+            {% endfor %}
 
 
-    </tbody>
-</table>
+        </tbody>
+    </table>
+</div>
 
 {% endblock %}
