--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -3,15 +3,19 @@
 {% block conteudo %}
 
 <br>
+<div class="col-lg-12">
+    <div class="row justify-content-end">
+        <div class="col-8">
 
-<div class="row justify-content-end">
-    <div class="col-8">
-
-        <a href="{% url 'pessoa.novo' %}" style="width: 150px;"
-            class="btn btn-outline-secondary btn-lg mt-4">Formulário</a>
-        <a href="{% url 'pessoa.index' %}" style="width: 150px;" class="btn btn-outline-secondary btn-lg mt-4">Lista</a>
+            <a href="{% url 'pessoa.novo' %}" style="width: 150px;"
+                class="btn btn-outline-secondary btn-lg mt-4">Formulário</a>
+            <a href="{% url 'pessoa.index' %}" style="width: 150px;"
+                class="btn btn-outline-secondary btn-lg mt-4">Lista</a>
+        </div>
     </div>
 </div>
 <br>
+
+
 
 {% endblock %}
