--- a/pessoa/templates/pessoa/pessoa_form.html
+++ b/pessoa/templates/pessoa/pessoa_form.html
@@ -12,7 +12,7 @@
         {{ form|crispy }}
         <div class="row">
             <div class="col">
-                <button type="submit" class="btn btn-primary btn-block btn-lg">
+                <button type="submit" class="btn btn-primary btn-block btn-lg mt-2 mb-2">
                     Salvar
                 </button>
             </div>
