--- a/pessoa/templates/pessoa/pessoa_lista.html
+++ b/pessoa/templates/pessoa/pessoa_lista.html
@@ -45,14 +45,10 @@
         </tbody>
     </table>
 </div>
-<div class="col-lg-12">
-    <div class="row justify-content-end">
-        <div class="col-8">
+<div class="mr-auto ml-auto text-center mt-4 mb-4">
+    <a href="{% url 'pessoa.novo' %}" style="width: 150px; margin-right: 20px;"
+        class="btn btn-outline-secondary btn-lg mt-4">Formulário</a>
+    <a href="{% url 'index' %}" style="width: 150px;" class="btn btn-outline-secondary btn-lg mt-4">Início</a>
 
-            <a href="{% url 'pessoa.novo' %}" style="width: 150px;"
-                class="btn btn-outline-secondary btn-lg mt-4">Formulário</a>
-            <a href="{% url 'index' %}" style="width: 150px;" class="btn btn-outline-secondary btn-lg mt-4">Início</a>
-        </div>
-    </div>
 </div>
 {% endblock %}
