adicionado links no footer

--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -1,14 +1,27 @@
 {% load static %}
 <!--_footer.html-->
 <footer class="bg-primary text-light">
-    <div class="container navbar-dark pt-4 mt-5">
+    <div class="container navbar-dark pt-3 mt-4">
         <div class="row">
             <div class="col">
                 <p class="text-left">Powered by Django</p>
             </div>
-            <div class="col">
-                <p class="text-right">Made By Eduardo Brandão</p>
+
+            <div class="col text-right">
+                <p class="">Made By Eduardo Brandão
+
+                    <a href="https://www.linkedin.com/in/eduardombrandao/">
+                        <img style="width: 30px; height: 30px;"
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDsN5i8bCjqal079EJP4B4RgUs1EtyXB8lgRyXFjV9e3Q4Sox-cSljFQ7YeHbyrGTjh5k&usqp=CAU">
+                    </a>
+                    <a href="https://github.com/EduardoBran?tab=repositories">
+                        <img style="width: 28px; height: 28px;"
+                            src="https://www.pikpng.com/pngl/m/256-2562286_github-logo-png-github-clipart.png">
+                    </a>
+
+                </p>
             </div>
+
         </div>
     </div>
 </footer>
