adicionado mensagem ao usuario informando que foi feito cadastro

--- a/pessoa/templates/pessoa/pessoa_lista.html
+++ b/pessoa/templates/pessoa/pessoa_lista.html
@@ -3,9 +3,10 @@
 {% block conteudo %}
 
 <div class="table-responsive" style="padding-top: 30px;">
+    {% include 'parciais/_messages.html' %}
     <table class="table table-bordered table-hover" style="width: 100%;">
         <thead class="thead-light">
-            <tr class="text-center">
+            <tr class="text-center" style="padding-top: 30px;">
                 <th scope="col">Nome</th>
                 <th scope="col">Sobrenome</th>
                 <th scope="col">Data de nascimento</th>
