--- a/pessoa/templates/pessoa/pessoa_lista.html
+++ b/pessoa/templates/pessoa/pessoa_lista.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block titulo %}Lista de Pessoas{% endblock %}
+
 {% block conteudo %}
 
 <div class="table-responsive" style="padding-top: 30px;">
