--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 
 <head>
-    <title>Cadastro</title>
+    <title>{% block titulo %}{% endblock %}</title>
     {% include 'parciais/_head.html' %}
 </head>
 
