--- a/pessoa/templates/pessoa/pessoa_form.html
+++ b/pessoa/templates/pessoa/pessoa_form.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
+{% block titulo %}Formulário{% endblock %}
+
 {% block conteudo %}
 
 <div class="col-lg-12">
